tests/knowledge/context/gcp/scenarios/cross_version/compute_firewall/basic/dev/cloudresourcemanager-v3-projects-get.json
{
    "value": [
        {
            "name": "projects/37924132841",
            "parent": "folders/773416991814",
            "projectId": "dev-for-tests",
            "state": "ACTIVE",
            "displayName": "dev-for-tests",
            "createTime": "2021-10-13T10:46:57.052Z",
            "updateTime": "2021-10-13T10:46:58.865Z",
            "etag": "AB7YL3G7NWpbVRwSuLkoWQ=="
        }
    ]
}
