tests/knowledge/context/gcp/scenarios/cross_version/compute_firewall/basic/dev/compute-v1-firewalls-list.json
{
    "value": [
        {
            "id": "2880626665895791032",
            "creationTimestamp": "2021-11-14T08:20:39.929-08:00",
            "name": "crtestfirewall1",
            "description": "Creates firewall rule targeting tagged instances",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/crtest-vpc",
            "priority": 1000,
            "destinationRanges": [
                "8.8.8.8"
            ],
            "allowed": [
                {
                    "IPProtocol": "tcp",
                    "ports": [
                        "80",
                        "8080",
                        "1000-2000"
                    ]
                }
            ],
            "direction": "EGRESS",
            "logConfig": {
                "enable": true,
                "metadata": "INCLUDE_ALL_METADATA"
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/crtestfirewall1",
            "kind": "compute#firewall"
        },
        {
            "id": "8102055048008993207",
            "creationTimestamp": "2021-11-14T08:20:40.127-08:00",
            "name": "crtestfirewall2",
            "description": "Creates firewall rule targeting tagged instances",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/crtest-vpc",
            "priority": 1000,
            "sourceRanges": [
                "8.8.8.8"
            ],
            "denied": [
                {
                    "IPProtocol": "esp"
                }
            ],
            "direction": "INGRESS",
            "logConfig": {
                "enable": true,
                "metadata": "EXCLUDE_ALL_METADATA"
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/crtestfirewall2",
            "kind": "compute#firewall"
        },
        {
            "id": "8555380123032510697",
            "creationTimestamp": "2021-10-14T00:36:38.640-07:00",
            "name": "default-allow-icmp",
            "description": "Allow ICMP from anywhere",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/default",
            "priority": 65534,
            "sourceRanges": [
                "0.0.0.0/0"
            ],
            "allowed": [
                {
                    "IPProtocol": "icmp"
                }
            ],
            "direction": "INGRESS",
            "logConfig": {
                "enable": false
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/default-allow-icmp",
            "kind": "compute#firewall"
        },
        {
            "id": "8220711551159132393",
            "creationTimestamp": "2021-10-14T00:36:38.627-07:00",
            "name": "default-allow-internal",
            "description": "Allow internal traffic on the default network",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/default",
            "priority": 65534,
            "sourceRanges": [
                "10.128.0.0/9"
            ],
            "allowed": [
                {
                    "IPProtocol": "tcp",
                    "ports": [
                        "0-65535"
                    ]
                },
                {
                    "IPProtocol": "udp",
                    "ports": [
                        "0-65535"
                    ]
                },
                {
                    "IPProtocol": "icmp"
                }
            ],
            "direction": "INGRESS",
            "logConfig": {
                "enable": false
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/default-allow-internal",
            "kind": "compute#firewall"
        },
        {
            "id": "4902420836176781545",
            "creationTimestamp": "2021-10-14T00:36:38.636-07:00",
            "name": "default-allow-rdp",
            "description": "Allow RDP from anywhere",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/default",
            "priority": 65534,
            "sourceRanges": [
                "0.0.0.0/0"
            ],
            "allowed": [
                {
                    "IPProtocol": "tcp",
                    "ports": [
                        "3389"
                    ]
                }
            ],
            "direction": "INGRESS",
            "logConfig": {
                "enable": false
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/default-allow-rdp",
            "kind": "compute#firewall"
        },
        {
            "id": "1490087474331541737",
            "creationTimestamp": "2021-10-14T00:36:38.632-07:00",
            "name": "default-allow-ssh",
            "description": "Allow SSH from anywhere",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/networks/default",
            "priority": 65534,
            "sourceRanges": [
                "0.0.0.0/0"
            ],
            "allowed": [
                {
                    "IPProtocol": "tcp",
                    "ports": [
                        "22"
                    ]
                }
            ],
            "direction": "INGRESS",
            "logConfig": {
                "enable": false
            },
            "disabled": false,
            "selfLink": "https://www.googleapis.com/compute/v1/projects/dev-for-tests/global/firewalls/default-allow-ssh",
            "kind": "compute#firewall"
        }
    ]
}
